syntax = "proto3";

package wpi.proto;

import "geometry2d.proto";

option java_package = "edu.wpi.first.math.proto";

message ProtobufTrajectoryState {
  double time = 1;
  ProtobufPose2d pose = 2;
  double linearVelocity = 3;
  double linearAcceleration = 4;
  double angularVelocity = 5;
}

message ProtobufTrajectory {
  repeated ProtobufTrajectoryState states = 2;
}
